--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "axios": "^0.18.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "recharts": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
